--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 	  <link rel="stylesheet" type="text/css" href="css/loader.css">
 	  <link rel="stylesheet" type="text/css" href="css/style.css">
 	  <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=0, shrink-to-fit=no">
+    <meta name="theme-color" content="#000" />
 	  <meta charset="utf-8">
 
 	  <meta name="keywords" content="wikipedia, game"/>
@@ -23,6 +24,15 @@
   	<meta name="og:image" content="img/image.png"/>
   	<meta name="og:description" content="Wikipedia game that you need hit which is most viewed by its photos and names"/>
 	  <meta name="og:email" content="yuri.yurifaria@gmail.com"/>
+
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-143577501-1"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+
+      gtag('config', 'UA-143577501-1');
+    </script>
   </head>
 
   <body>
