--- a/index.html
+++ b/index.html
@@ -18,12 +18,13 @@
 	  <meta name="author" content="Yuri Faria, yuri.yurifaria@gmail.com">
 	  <meta name="url" content="https://windows87.github.io/the-wikipedia-article-game">
 
-  	<meta name="og:title" content="The Wikipedia Article Game"/>
-	  <meta name="og:url" content="https://windows87.github.io/the-wikipedia-article-game"/>
-	  <meta name="og:site_name" content="The Wikipedia Article Game"/>
-  	<meta name="og:image" content="img/image.png"/>
-  	<meta name="og:description" content="Wikipedia game that you need hit which is most viewed by its photos and names"/>
-	  <meta name="og:email" content="yuri.yurifaria@gmail.com"/>
+  	<meta property="og:title" content="The Wikipedia Article Game"/>
+    <meta property="og:type" content="game"/>
+	  <meta property="og:url" content="https://windows87.github.io/the-wikipedia-article-game"/>
+	  <meta property="og:site_name" content="The Wikipedia Article Game"/>
+  	<meta property="og:image" content="img/image.png"/>
+  	<meta property="og:description" content="Wikipedia game that you need hit which is most viewed by its photos and names"/>
+	  <meta property="og:email" content="yuri.yurifaria@gmail.com"/>
 
     <script async src="https://www.googletagmanager.com/gtag/js?id=UA-143577501-1"></script>
     <script>
